Fixing some nuget problems.

--- a/DevExpress.Mvvm.UI/DevExpress.Mvvm.UI.Wpf.NetCore.Desktop.Free.csproj
+++ b/DevExpress.Mvvm.UI/DevExpress.Mvvm.UI.Wpf.NetCore.Desktop.Free.csproj
@@ -220,8 +220,6 @@
     <PackageReference Include="System.Data.SqlClient" Version="4.6.0" />
   </ItemGroup>
   <ItemGroup>
-    <Reference Include="DevBot9.Mvvm">
-      <HintPath>..\Bin\NETCoreDesktop\DevBot9.Mvvm.dll</HintPath>
-    </Reference>
+    <ProjectReference Include="..\DevExpress.Mvvm\DevExpress.Mvvm.Wpf.NetCore.Desktop.Free.csproj" />
   </ItemGroup>
 </Project>
